# enote

./: .gitignore  .npmrc  CLAUDE.md  Cargo.toml  README.en.md  README.md  README.zh-CN.md  eslint.config.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
crates/enote-mcp/: Cargo.toml
crates/enote-mcp/src/: main.rs  mcp.rs
doc/: User-Manual.md  application-mysql.yml  application-posgres.yml  application.yml  用户操作手册.md
doc/manual/en-US/: 01-introduction.md  02-installation.md  03-overview.md  04-notebook.md  05-tag.md  06-note.md  07-rich-editor.md  08-markdown.md  09-history.md  10-template.md  11-export.md  12-import.md  13-backup.md  14-settings.md  15-command-palette.md  16-system-tray.md  17-shortcuts.md  18-status-bar.md  19-startup.md  20-mcp.md  21-storage.md  22-help.md  23-logs.md  24-auto-update.md  appendix-changelog.md  index.md
doc/manual/zh-CN/: 01-introduction.md  02-installation.md  03-overview.md  04-notebook.md  05-tag.md  06-note.md  07-rich-editor.md  08-markdown.md  09-history.md  10-template.md  11-export.md  12-import.md  13-backup.md  14-settings.md  15-command-palette.md  16-system-tray.md  17-shortcuts.md  18-status-bar.md  19-startup.md  20-mcp.md  21-storage.md  22-help.md  23-logs.md  24-auto-update.md  appendix-changelog.md  index.md
scripts/: merge-manual.mjs
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/resources/help/: manual-en-US.md  manual-zh-CN.md
src-tauri/src/: command.rs  config.rs  error.rs  i18n.rs  lib.rs  main.rs  model.rs
src-tauri/src/command/: app_log.rs  backup.rs  cloud_backup.rs  misc.rs  mod.rs  note.rs  notebook.rs  profile.rs  settings.rs  sync.rs  tag.rs
src-tauri/src/entity/: app_log.rs  category.rs  mod.rs  note.rs  note_attachment.rs  note_history.rs  note_link.rs  note_tags.rs  note_template.rs  notebook.rs  prelude.rs  settings.rs  sync_log.rs  sync_log_detail.rs  tag.rs
src-tauri/src/migration/: m20251221_000001_create_notebook_table.rs  m20251221_000002_create_note_table.rs  m20251221_000003_create_tag_table.rs  m20251221_000004_create_note_tags_table.rs  m20251221_000005_create_note_history_table.rs  m20251230_000001_create_note_fts_table.rs  m20260306_000001_add_note_history_index.rs  m20260310_000001_create_settings_table.rs  m20260310_000002_add_note_is_pinned.rs  m20260310_000003_add_note_deleted_at.rs  m20260311_000001_upgrade_note_fts.rs  m20260311_000002_create_note_template_table.rs  m20260311_000003_create_note_link_table.rs  m20260315_000001_add_note_history_source.rs  m20260315_000002_add_note_template_content_type.rs  m20260315_000003_add_mcp_access.rs  m20260317_000001_upgrade_note_fts_tags.rs  m20260318_000001_add_performance_indexes.rs  m20260320_000001_create_sync_log_tables.rs  m20260320_000002_add_query_indexes.rs  m20260327_000001_create_app_log_table.rs  m20260328_000001_add_search_composite_indexes.rs  m20260329_000001_fix_app_log_id_type.rs  m20260330_000001_create_note_attachment_table.rs  m20260330_000002_add_note_starred.rs  m20260331_000001_fix_note_fts_triggers.rs  m20260401_000001_add_attachment_hash.rs  mod.rs
src-tauri/src/service/: app_log.rs  attachment.rs  auth.rs  backup.rs  cloud_backup.rs  crypto.rs  image.rs  keychain.rs  mcp_access.rs  mod.rs  note.rs  note_history.rs  note_link.rs  note_template.rs  notebook.rs  profile.rs  settings.rs  sync.rs  sync_log.rs  tag.rs
src-tauri/src/service/backup/: csv_format.rs  excel.rs  mod.rs  sql.rs
src-tauri/src/service/enote_server/: auth.rs  client.rs  endpoints.rs  error.rs  mod.rs
src-tauri/src/service/note/: crud.rs  crypto_helper.rs  mod.rs  search.rs
src/api/: appLog.ts  help.ts  note.ts
src/components/: AppSidebar.vue  AttachmentPanel.vue  BackupDialog.vue  CommandPalette.vue  Editor.vue  EditorDrawer.vue  EditorSettings.vue  EditorSettingsDialog.vue  EditorStatusBar.vue  EditorTitleBar.vue  EncryptDialog.vue  ExportDialog.vue  HelpManual.vue  HelpWindow.vue  History.vue  HistoryTableSkeleton.vue  ImportDialog.vue  LocaleSwitcher.vue  LockScreen.vue  LogDialog.vue  MarkdownSplitEditor.vue  NoteEditor.vue  NoteHistoryDialog.vue  NoteLinkPanel.vue  NoteList.vue  NoteListSkeleton.vue  NotebookTreeItem.vue  NotesList.vue  ProfileSelector.vue  SettingsDialog.vue  SetupWizard.vue  Sidebar.vue  SyncDialog.vue  SyncHistoryDialog.vue  SyncResultDialog.vue  TableOfContents.vue  TemplateDialog.vue  TipTapEditor.vue  TiptapToolbar.vue  TrashDialog.vue  (+1 more)
src/components/settings/: SettingsAppearance.vue  SettingsBackup.vue  SettingsCloudBackup.vue  SettingsMcp.vue  SettingsSecurity.vue  SettingsShortcuts.vue
src/components/toolbar/: ActionButtons.vue  AlignmentToolbar.vue  CodeBlockSelect.vue  ColorToolbar.vue  HeadingFontToolbar.vue  ImageDialog.vue  IndentToolbar.vue  LinkDialog.vue  LinkImageToolbar.vue  ListToolbar.vue  TableToolbar.vue  (+8 more)
src/composables/: store.ts  useBackendCapabilities.ts  useKeyboardShortcuts.ts  useLockScreen.ts  useNoteEditor.ts  useNoteHistory.ts  useNoteSearch.ts  useNotebookManager.ts  useNotes.ts  usePlatform.ts  useShortcutSettings.ts  useSync.ts  useTagManager.ts
src/config/: colors.ts  constants.ts  editorExtensions.ts  shortcuts.ts
src/extensions/: DragHandle.ts  FontSize.ts  Indent.ts  LazyImage.ts  PasteHandler.ts  SearchAndReplace.ts  TableOfContents.ts  index.ts
src/i18n/: index.ts
src/stores/: app.ts  editor.ts  notebooks.ts  notes.ts  tags.ts  ui.ts
src/styles/: main.css  prosemirror.css
src/test/: converters.test.ts  debounce.test.ts  errorHandler.test.ts  extensions.test.ts  lruCache.test.ts  setup.ts  validation.test.ts
src/types/: i18n.d.ts  index.ts  tiptap-markdown.ts
src/utils/: converters.ts  datetime.ts  debounce.ts  diff.ts  errorHandler.ts  export.ts  index.ts  invokeWithRetry.ts  logger.ts  lruCache.ts  markdown.ts  markdownWorker.ts  multiWindow.ts  sanitize.ts  validation.ts
src/workers/: markdown.worker.ts
(+33 files in other folders)
