[workspace]
members = ["src-tauri", "crates/enote-mcp"]
resolver = "2"

[workspace.package]
version = "0.9.0"
edition = "2024"
authors = ["124244236@qq.com"]

[workspace.dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon"] }
tauri-build = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
serde_yaml = "0.9"

# Database
sea-orm = { version = "1", features = ["sqlx-mysql", "sqlx-sqlite", "sqlx-postgres", "runtime-tokio"] }
sea-orm-migration = { version = "1", features = ["runtime-tokio", "sqlx-sqlite", "sqlx-mysql", "sqlx-postgres"] }

# Async
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "io-util", "fs"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Crypto
aes-gcm = "0.10"
argon2 = "0.5"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"

# Data formats
rust_xlsxwriter = "0.82"
calamine = "0.26"
csv = "1"
zip = "2"

# Utilities
chrono = "0.4"
config = "0.15"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
sys-locale = "0.3"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

# MCP
rmcp = { version = "0.16", features = ["server", "transport-io"] }
schemars = "1"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
