[package]
name = "enote"
version = "0.3.0"
description = "个人笔记"
authors = ["124244236@qq.com"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "enote_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.147"
sea-orm = { version = "1.1.19", features = ["sqlx-mysql", "sqlx-sqlite", "sqlx-postgres", "runtime-tokio"] }
sea-orm-migration = { version = "1.1", features = ["runtime-tokio", "sqlx-sqlite", "sqlx-mysql", "sqlx-postgres"] }
anyhow = "1.0.100"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive", "env"] }
config = "0.15.19"
serde_with = "3.16.1"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.


