[package]
name = "enote"
version = "0.6.0"
description = "个人笔记"
authors = ["124244236@qq.com"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "enote_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.10.2", features = ["tray-icon"] }
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
sea-orm = { version = "1.1.19", features = ["sqlx-mysql", "sqlx-sqlite", "sqlx-postgres", "runtime-tokio"] }
sea-orm-migration = { version = "1.1", features = ["runtime-tokio", "sqlx-sqlite", "sqlx-mysql", "sqlx-postgres"] }
anyhow = "1.0.102"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "io-util", "fs"] }
chrono = "0.4.44"
config = "0.15.21"
serde_with = "3.17.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sys-locale = "0.3"
rust_xlsxwriter = "0.82"
calamine = "0.26"
csv = "1.3"
zip = "2.2"
uuid = { version = "1.22.0", features = ["v4"] }
base64 = "0.22.1"
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
clap = { version = "4", features = ["derive"] }
argon2 = "0.5"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.


