[package]
name = "enote"
description = "个人笔记"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "enote_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[features]
default = ["desktop"]
desktop = [
  "tauri/tray-icon",
  "dep:keyring",
  "dep:clap",
  "db-full",
]
# 数据库驱动 + Keychain（独立于桌面 UI 功能，debug 构建也需要）
db-full = [
  "dep:keyring",
  "sea-orm/sqlx-mysql",
  "sea-orm/sqlx-postgres",
  "sea-orm-migration/sqlx-mysql",
  "sea-orm-migration/sqlx-postgres",
]

[dependencies]
# Tauri
tauri.workspace = true
tauri-plugin-fs.workspace = true
tauri-plugin-opener.workspace = true
tauri-plugin-shell.workspace = true
tauri-plugin-dialog.workspace = true
tauri-plugin-updater.workspace = true
tauri-plugin-process.workspace = true

# Serde
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
serde_yaml.workspace = true

# Database
sea-orm.workspace = true
sea-orm-migration.workspace = true

# Async
tokio.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

# Desktop-only (optional)
clap = { workspace = true, optional = true }
keyring = { workspace = true, optional = true }

# Crypto
aes-gcm.workspace = true
argon2.workspace = true
sha2.workspace = true
rand.workspace = true
base64.workspace = true

# Data formats
rust_xlsxwriter.workspace = true
calamine.workspace = true
csv.workspace = true
zip.workspace = true

# HTTP Client
reqwest.workspace = true

# Utilities
chrono.workspace = true
config.workspace = true
uuid.workspace = true
dirs.workspace = true
sys-locale.workspace = true
