[package]
name = "enote-mcp"
version = "0.8.0"
description = "ENote MCP Server - AI 工具集成"
edition = "2024"

[[bin]]
name = "enote-mcp"
path = "src/main.rs"

[dependencies]
enote_lib = { path = "../../src-tauri", package = "enote" }
rmcp = { version = "0.16", features = ["server", "transport-io"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio"] }
sea-orm-migration = { version = "1.1", features = ["runtime-tokio", "sqlx-sqlite"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
