[package]
name = "enote-mcp"
description = "ENote MCP Server - AI 工具集成"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "enote-mcp"
path = "src/main.rs"

[dependencies]
enote_lib = { path = "../../src-tauri", package = "enote" }

# MCP
rmcp.workspace = true
schemars.workspace = true

# Serde
serde.workspace = true
serde_json.workspace = true

# Database
sea-orm = { workspace = true, features = ["sqlx-sqlite", "runtime-tokio"] }
sea-orm-migration = { workspace = true, features = ["runtime-tokio", "sqlx-sqlite"] }

# Async
tokio.workspace = true

# Error handling
anyhow.workspace = true

# CLI
clap.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
